--- a/src/assets/lx-pt-akordi.css
+++ b/src/assets/lx-pt-akordi.css
@@ -1,17 +1,22 @@
 .lx {
   --color-brand: #07004d;
-  --color-interactive-background: #090067;
-  --color-interactive-hover-background: #0d0286;
+  --color-interactive-background: #07004d;
+  --color-interactive-hover-background: #050036;
   --color-background: hwb(240 92% 6%);
-  --color-highlight: #B3D4FF;
+  --color-highlight: #ddecff;
   --color-layout-background: #111;
   --color-interactive-secondary-background: #111;
   --color-grid-hover-background: #ddd;
   --gap-form: 1rem;
+
+  --color-button-nav-selected-background: var(--color-highlight);
 }
 
 .lx.lx-theme-dark {
   --color-brand: #1483fb;
-  --color-interactive-background: #1483fb;
+  --color-interactive-background: #3d9bff;
   --color-interactive-hover-background: #1173db;
+  --color-highlight: #364485;
+
+  --color-button-nav-selected-background: var(--color-highlight);
 }
