--- a/src/assets/lx-pt-akordi.css
+++ b/src/assets/lx-pt-akordi.css
@@ -1,7 +1,7 @@
 .lx {
   --color-brand: #07004d;
   --color-interactive-background: #07004d;
-  --color-interactive-hover-background: #050036;
+  --color-interactive-hover-background: #2038b5;
   --color-background: hwb(240 92% 6%);
   --color-highlight: #ddecff;
   --color-layout-background: #111;
@@ -9,14 +9,13 @@
   --color-grid-hover-background: #ddd;
   --gap-form: 1rem;
   --font-size: 14px;
-  --color-button-nav-selected-background: var(--color-highlight);
+  --color-interactive-foreground: #ffffff;
 }
 
 .lx.lx-theme-dark {
-  --color-brand: #1483fb;
-  --color-interactive-background: #3d9bff;
-  --color-interactive-hover-background: #1173db;
-  --color-highlight: #364485;
-
-  --color-button-nav-selected-background: var(--color-highlight);
+  --color-brand: #607afb;
+  --color-interactive-background: #607afb;
+  --color-interactive-hover-background: #4860db;
+  --color-interactive-foreground: #ffffff;
+  --color-highlight: #303f70;
 }
